frontend/tests/cases/positive/evalInstanceEqMultiparam.gr
-- EXPECTED: (True, False)
data Bool = True | False

interface Eq a b where
  equal : a -> b -> Bool

data A = A' | B''

data B = A'' | B'

instance Eq A B where
  equal A' A'' = True;
  equal B'' B' = True;
  equal A' B' = False;
  equal B'' A'' = False


main : (Bool, Bool)
main = (equal A' A'', equal A' B')
