frontend/tests/cases/negative/interfaces/kind-mismatch/instanceFreeVarMismatchedMulti.gr
interface Mismatch a (b : Type -> Type)

-- 'a' cannot have both kind 'Type' and kind 'Type -> Type'
instance Mismatch a a
